Fix a bug in the css file concerning the navbar section. The header links were getting cut off when they were wrapping in response to changes in the screen size. Fix the bug by changing the max-height of .nav-container to 100px

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ ul {
 .nav-container {
     background-color: #1f2937;
     width: 100%;
-    height: 50px;
+    max-height: 100px;
    
 }
 
